# PPB-Model

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MODELLING_PLAN.md  MODEL_CARD.md  README-Spaces.md  README.md  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt
.claude/: launch.json
.github/workflows/: docker-build.yml
configs/: default.yaml
docs/: app.js  index.html  model_info.json  parity_test.json  styles.css
models/: final_xgb_hybrid.joblib
scripts/: ablation.py  analyze_target.py  build_features.py  confirm_robustness.py  create_splits.py  evaluate_models.py  export_model_info.py  export_parity.py  external_validation.py  finalize_models.py  head_to_head.py  interpret.py  make_figures.py  make_model_card.py  predict.py  prepare_data.py  promote_augmented.py  robustness.py  train_augmented.py  train_baselines.py  train_improved_model.py
serve/: DEPLOY.md  app.py  model_info.py  requirements-serve.txt
serve/static/: index.html
src/ppb_model/: __init__.py  baselines.py  data.py  evaluation.py  features.py  predict.py  results.py  splitting.py  standardisation.py  targets.py  train.py  tuning.py  uncertainty.py  utils.py
tests/: test_evaluation_features.py  test_splitting.py  test_standardisation.py  test_targets.py
