[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ppb-model"
version = "0.1.0"
description = "Human plasma protein binding (PPB) prediction on TDCommons PPBR_AZ"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "rdkit>=2023.9",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "joblib>=1.3",
    "xgboost>=2.0",
    "optuna>=3.5",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
